Fix Header alignment

--- a/styles/app.css
+++ b/styles/app.css
@@ -237,7 +237,7 @@ h2, h1 {
   text-align : center;
   color: white;
   font-size : 25px;
-  padding : 10px;
+  padding : 20px;
 }
 
 .description { 
